@@ -1003,7 +1003,7 @@ namespace UoFiddler.Controls.UserControls
         }
         #endregion
 
-        #region Cliport LandTiles - The graphics are imported from the clipboard.        
+        #region Cliport LandTiles - The graphics are imported from the clipboard.
         private void importToolStripMenuItem_Click(object sender, EventArgs e)
         {
             // Check if the clipboard contains an image
@@ -1030,9 +1030,9 @@ namespace UoFiddler.Controls.UserControls
                         // Define the colors to ignore
                         Color[] colorsToIgnore = new Color[]
                         {
-                    Color.FromArgb(211, 211, 211), // #D3D3D3
-                    Color.FromArgb(0, 0, 0),       // #000000
-                    Color.FromArgb(255, 255, 255)  // #FFFFFF
+                            Color.FromArgb(211, 211, 211), // #D3D3D3
+                            Color.FromArgb(0, 0, 0),       // #000000
+                            Color.FromArgb(255, 255, 255)  // #FFFFFF
                         };
 
                         // Iterate through each pixel of the image
@@ -1066,20 +1066,14 @@ namespace UoFiddler.Controls.UserControls
                             }
                         }
 
-                        // Call the OnClickReplace method with the selected graphic ID and the new bitmap
-                        Art.ReplaceLand(index, newBmp);
-                        ControlEvents.FireLandTileChangeEvent(this, index);
+                        // Replace the graphic in the Art object
+                        Art.ReplaceLand(_selectedGraphicId, newBmp);
 
-                        // Update the _tileList to insert the index only once
-                        if (!_tileList.Contains(index))
-                        {
-                            _tileList.Add(index);
-                            _tileList.Sort();
-                        }
+                        // Fire the LandTileChangeEvent to inform other parts of the application
+                        ControlEvents.FireLandTileChangeEvent(this, _selectedGraphicId);
 
-                        LandTilesTileView.VirtualListSize = _tileList.Count;
+                        // Refresh the view
                         LandTilesTileView.Invalidate();
-                        SelectedGraphicId = index;
                         Options.ChangedUltimaClass["Land Tiles"] = true;
                     }
                     else
@@ -1093,7 +1087,9 @@ namespace UoFiddler.Controls.UserControls
                 MessageBox.Show("No image in the clipboard.", "Error", MessageBoxButtons.OK, MessageBoxIcon.Error);
             }
         }
+        #endregion
 
+        #region LandTilesControl_KeyDown
         //Keydown Import Strg+V
         private void LandTilesControl_KeyDown(object sender, KeyEventArgs e)
         {
@@ -1116,98 +1112,9 @@ namespace UoFiddler.Controls.UserControls
                 gotoMarkToolStripMenuItem_Click(sender, e);
             }
         }
+        #endregion        
 
-        //Ingnore to temp.
-        /*private void importToTempToolStripMenuItem_Click(object sender, EventArgs e)
-        {
-            if (Clipboard.ContainsImage())
-            {
-                using (Bitmap bmp = new Bitmap(Clipboard.GetImage()))
-                {
-                    int graphicSize = 44;
-
-                    int offsetX = (bmp.Width - graphicSize) / 2;
-                    int offsetY = (bmp.Height - graphicSize) / 2;
-
-                    int index = _tileList.IndexOf(_selectedGraphicId);
-
-                    if (index >= 0 && index < _tileList.Count)
-                    {
-                        Bitmap newBmp = new Bitmap(bmp.Width, bmp.Height);
-
-                        Color[] colorsToIgnore = new Color[]
-                        {
-                    Color.FromArgb(211, 211, 211), // #D3D3D3
-                    Color.FromArgb(0, 0, 0),       // #000000
-                    Color.FromArgb(255, 255, 255)  // #FFFFFF
-                        };
-
-                        for (int x = 0; x < bmp.Width; x++)
-                        {
-                            for (int y = 0; y < bmp.Height; y++)
-                            {
-                                if (x >= offsetX && x < offsetX + graphicSize && y >= offsetY && y < offsetY + graphicSize)
-                                {
-                                    Color pixelColor = bmp.GetPixel(x, y);
-
-                                    if (colorsToIgnore.Contains(pixelColor))
-                                    {
-                                        // Set the color of the current pixel to transparent
-                                        newBmp.SetPixel(x, y, Color.Transparent);
-                                    }
-                                    else
-                                    {
-                                        newBmp.SetPixel(x, y, pixelColor);
-                                    }
-                                }
-                                else
-                                {
-                                    newBmp.SetPixel(x, y, Color.Transparent);
-                                }
-                            }
-                        }
-
-                        // Create the "clipboardTemp" directory in the same directory as the main program
-                        string directoryPath = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "clipboardTemp");
-                        Directory.CreateDirectory(directoryPath);
-
-                        // Save the final bitmap to a file in the "clipboardTemp" directory with the selected index and an additional name "LandTiles"
-                        string fileName = $"LandTiles_{index:X}.bmp";
-                        string filePath = Path.Combine(directoryPath, fileName);
-                        newBmp.Save(filePath);
-
-                        // Import the saved bitmap
-                        using (var bmpTemp = new Bitmap(filePath))
-                        {
-                            Bitmap bitmap = new Bitmap(bmpTemp);
-
-                            Art.ReplaceLand(index, bitmap);
-
-                            ControlEvents.FireLandTileChangeEvent(this, index);
-
-                            if (!_tileList.Contains(index))
-                            {
-                                _tileList.Add(index);
-                                _tileList.Sort();
-                            }
-
-                            LandTilesTileView.VirtualListSize = _tileList.Count;
-                            LandTilesTileView.Invalidate();
-                            SelectedGraphicId = index;
-                            Options.ChangedUltimaClass["Land Tiles"] = true;
-                        }
-                    }
-                    else
-                    {
-                        MessageBox.Show("Invalid index.", "Error", MessageBoxButtons.OK, MessageBoxIcon.Error);
-                    }
-                }
-            }
-            else
-            {
-                MessageBox.Show("No image in the clipboard.", "Error", MessageBoxButtons.OK, MessageBoxIcon.Error);
-            }*/
-
+        #region importToTempToolStripMenuItem  Save Image TempDir
         private void importToTempToolStripMenuItem_Click(object sender, EventArgs e)
         {
             // Check if the clipboard contains an image
@@ -1218,11 +1125,13 @@ namespace UoFiddler.Controls.UserControls
                 {
                     // Define the size of the desired graphic
                     int graphicSize = 44;
+
                     // Calculate the offset to center the graphic
                     int offsetX = (bmp.Width - graphicSize) / 2;
                     int offsetY = (bmp.Height - graphicSize) / 2;
+
                     // Determine the position of the selected graphic in the _tileList.
-                    int index = _tileList.IndexOf(_selectedGraphicId);
+                    int index = _selectedGraphicId; // Changed from _tileList.IndexOf(_selectedGraphicId);
 
                     if (index >= 0 && index < _tileList.Count)
                     {
@@ -1285,12 +1194,7 @@ namespace UoFiddler.Controls.UserControls
 
                             ControlEvents.FireLandTileChangeEvent(this, index);
 
-                            if (!_tileList.Contains(index))
-                            {
-                                _tileList.Add(index);
-                                _tileList.Sort();
-                            }
-
+                            // Update the view
                             LandTilesTileView.VirtualListSize = _tileList.Count;
                             LandTilesTileView.Invalidate();
                             SelectedGraphicId = index;
